added skills content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,36 @@
             </div>
 
         </section>
+        <section>
+            <h3 class="section-title">What I Do</h3>
+            <!-- .skill-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanila JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, recusandae. Mollitia quasi labore alias ex!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Aperiam, enim ad voluptatum maiores maxime veniam error, voluptates natus cum commodi minus cupiditate repudiandae.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongodb</p>
+                    <p class="skill-description">Laborum omnis pariatur exercitationem, nam labore alias esse vero, fugit ipsam, similique modi magnam repudiandae!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node JS</p>
+                    <p class="skill-description">Blanditiis deleniti possimus provident ea quia, voluptatibus illum animi quo necessitatibus? In unde dicta autem.</p>
+                </div>
+            </div>
+            
+        </section>
+        <section>
+           <h3 class="section-title">A summary of My Resume</h3>
+        </section>
     </main>
     <footer>
 
